[project]
name = "idoly-assets-curator"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "boto3>=1.34.102",
    "cloudinary>=1.40.0",
    "ffmpeg-python>=0.2.0",
    "flask>=2.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.27",
    "rich>=12.4",
    "unitypy>=1.10.18",
    "gunicorn>=20.1.0",
]

[dependency-groups]
dev = ["autopep8"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
